general list unifying mixin and other spacing/font issues

--- a/css/ccap-chemistry.css
+++ b/css/ccap-chemistry.css
@@ -365,10 +365,6 @@ div.section > div.titlepage div.abstract > .title {
   border: none;
   margin-top: 0;
 }
-div.section > div.titlepage div.abstract ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
-}
 div.section > div.titlepage div.abstract ul.itemizedlist > .listitem {
   display: list-item;
   padding-top: 0;
@@ -1334,7 +1330,8 @@ p:nth-of-type(2),
   display: none;
 }
 .note.try .exercise .problem {
-  margin-left: 4em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 .note.try .exercise .problem ol,
 .note.try .exercise .problem ul {
@@ -1809,9 +1806,6 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
 }
 .cnx-eoc.cnx-solutions p:nth-of-type(1) {
   margin-top: 1em;
-}
-.cnx-eoc .problem .orderedlist {
-  margin-left: 4em;
 }
 .cnx-eoc .problem::before {
   padding-right: .5em;
@@ -2422,8 +2416,8 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 }
 .example .exercise .solution ol,
 .example .exercise .solution ul {
-  margin-left: 2em;
-  margin-top: 2em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 /******************************************************************************
  * Styling for modified table design (2 tables, one plain and one colored)
@@ -2511,12 +2505,12 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 .table table td {
   padding: 1em;
 }
-.table .itemizedlist {
-  /*
-      margin: 0; //reset
-      padding-left: 1em;*/
+.table ul.itemizedlist,
+.table ol.orderedlist {
+  margin: 0;
 }
-.table .itemizedlist > .listitem > p {
+.table ul.itemizedlist > .listitem > p,
+.table ol.orderedlist > .listitem > p {
   font-family: Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 .table.color th {
@@ -2579,9 +2573,8 @@ div.itemizedlist ul,
 div.orderedlist ul,
 div.itemizedlist ol,
 div.orderedlist ol {
-  padding-left: 26px;
-  margin: 0;
-  margin-left: 0;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 /******************************************************
  * Custom psychology elements
@@ -3020,10 +3013,6 @@ div.orderedlist ol {
   border: none;
   margin-top: 0;
 }
-.chapter .note.chapter-objectives ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
-}
 .chapter .note.chapter-objectives ul.itemizedlist > .listitem {
   display: list-item;
   padding-top: 0;
@@ -3117,10 +3106,6 @@ div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-autog
 .section > .titlepage .abstract > .title {
   border: none;
   margin-top: 0;
-}
-.section > .titlepage .abstract ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
 }
 .section > .titlepage .abstract ul.itemizedlist > .listitem {
   display: list-item;
@@ -3280,10 +3265,6 @@ p,
 .section > p {
   font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   font: 10pt/13pt Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
-}
-.module > .section > div.orderedlist > ol.orderedlist,
-.module > .section > div.itemizedlist > ul.itemizedlist {
-  margin-left: 20pt;
 }
 /******************************************************
  * Key Terms / Glossary
@@ -3639,6 +3620,7 @@ div.book > div.chapter > div.section div.equation > *:last-child::after {
   font-size: 1.3em;
   font-weight: bold;
   color: #354da1;
+  text-align: left;
 }
 .example > .body div.note {
   padding-left: 1em;
@@ -3666,20 +3648,18 @@ div.book > div.chapter > div.section div.equation > *:last-child::after {
   font-size: 11pt;
   display: inline;
   padding-right: .5em;
-  font-size: 1.2em;
+  font-size: 13px;
   font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 .example > .body div.note div.body,
 .example > .body div.note div.body p {
   display: inline;
-  font-size: 1.1em;
   font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 /******************************************************
  * Step lists
  ******************************************************/
 div.step-list ul {
-  margin-left: 0;
   list-style-type: none;
   counter-reset: steplist;
 }
@@ -3780,6 +3760,9 @@ span.emphasis-leading-indent strong {
   margin-top: 0;
   margin-bottom: .2em;
 }
+.cnx-eoc.exercises > .section > .body > .exercise:last-child {
+  margin-bottom: .5em;
+}
 .cnx-eoc .section .title {
   padding-top: 0;
 }
@@ -3791,6 +3774,12 @@ div.colophon.end-of-book-solutions .chapter-area div.solution {
   padding: 0;
   display: block;
   padding-bottom: .5em;
+}
+div.colophon.end-of-book-solutions .chapter-area div.solution div.itemizedlist ul,
+div.colophon.end-of-book-solutions .chapter-area div.solution div.orderedlist ul,
+div.colophon.end-of-book-solutions .chapter-area div.solution div.itemizedlist ol,
+div.colophon.end-of-book-solutions .chapter-area div.solution div.orderedlist ol {
+  margin-left: 0;
 }
 /******************************************************
  * Appendix
