--- a/css/ccap-economics.css
+++ b/css/ccap-economics.css
@@ -363,10 +363,6 @@ div.section > div.titlepage div.abstract > .title {
   border: none;
   margin-top: 0;
 }
-div.section > div.titlepage div.abstract ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
-}
 div.section > div.titlepage div.abstract ul.itemizedlist > .listitem {
   display: list-item;
   padding-top: 0;
@@ -1322,7 +1318,8 @@ p:nth-of-type(2),
   display: none;
 }
 .note.try .exercise .problem {
-  margin-left: 4em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 .note.try .exercise .problem ol,
 .note.try .exercise .problem ul {
@@ -1824,9 +1821,6 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
 }
 .cnx-eoc.cnx-solutions p:nth-of-type(1) {
   margin-top: 1em;
-}
-.cnx-eoc .problem .orderedlist {
-  margin-left: 4em;
 }
 .cnx-eoc .problem::before {
   padding-right: .5em;
@@ -2415,8 +2409,8 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 }
 .example .exercise .solution ol,
 .example .exercise .solution ul {
-  margin-left: 2em;
-  margin-top: 2em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 /******************************************************************************
  * Styling for modified table design (2 tables, one plain and one colored)
@@ -2492,12 +2486,12 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 .table table td {
   padding: 1em;
 }
-.table .itemizedlist {
-  /*
-      margin: 0; //reset
-      padding-left: 1em;*/
+.table ul.itemizedlist,
+.table ol.orderedlist {
+  margin: 0;
 }
-.table .itemizedlist > .listitem > p {
+.table ul.itemizedlist > .listitem > p,
+.table ol.orderedlist > .listitem > p {
   font-family: Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 .table.color th {
@@ -2560,9 +2554,8 @@ div.itemizedlist ul,
 div.orderedlist ul,
 div.itemizedlist ol,
 div.orderedlist ol {
-  padding-left: 26px;
-  margin: 0;
-  margin-left: 0;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 /******************************************************
  * Custom psychology elements
@@ -2861,10 +2854,6 @@ div.orderedlist ol {
   border: none;
   margin-top: 0;
 }
-.chapter .note.chapter-objectives ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
-}
 .chapter .note.chapter-objectives ul.itemizedlist > .listitem {
   display: list-item;
   padding-top: 0;
@@ -2962,10 +2951,6 @@ div.book div.chapter > div.titlepage > div > div h1.title span.cnx-gentext-autog
 .section > .titlepage .abstract > .title {
   border: none;
   margin-top: 0;
-}
-.section > .titlepage .abstract ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
 }
 .section > .titlepage .abstract ul.itemizedlist > .listitem {
   display: list-item;
@@ -3118,10 +3103,6 @@ p,
 .section > p {
   font-family: Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   font: 10pt/13pt Liberation Serif, serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
-}
-.module > .section > div.orderedlist > ol.orderedlist,
-.module > .section > div.itemizedlist > ul.itemizedlist {
-  margin-left: 20pt;
 }
 /******************************************************
  * Key Terms / Glossary
@@ -3417,10 +3398,6 @@ div.book > div.chapter > div.section div.equation > *:last-child::after {
   font: normal normal 700 10pt Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
   border: none;
   margin-top: 0;
-}
-.chapter .note.chapter-objectives ul.itemizedlist {
-  margin-left: 0;
-  padding-left: 20pt;
 }
 .chapter .note.chapter-objectives ul.itemizedlist > .listitem {
   display: list-item;
