--- a/css/ccap-precalculus.css
+++ b/css/ccap-precalculus.css
@@ -1119,7 +1119,8 @@ p:nth-of-type(2),
   display: none;
 }
 .note.try .exercise .problem {
-  margin-left: 4em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 .note.try .exercise .problem ol,
 .note.try .exercise .problem ul {
@@ -1443,9 +1444,6 @@ div.book div > div.section > div.section > div.section div.titlepage > div > div
 }
 .cnx-eoc.cnx-solutions p:nth-of-type(1) {
   margin-top: 1em;
-}
-.cnx-eoc .problem .orderedlist {
-  margin-left: 4em;
 }
 .cnx-eoc .problem::before {
   padding-right: .5em;
@@ -1964,8 +1962,8 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 }
 .example .exercise .solution ol,
 .example .exercise .solution ul {
-  margin-left: 2em;
-  margin-top: 2em;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 /******************************************************************************
  * Styling for modified table design (2 tables, one plain and one colored)
@@ -2019,12 +2017,12 @@ div.book div.chapter > div.section div.example div.exercise .commentary .figure 
 .table table td {
   padding: 1em;
 }
-.table .itemizedlist {
-  /*
-      margin: 0; //reset
-      padding-left: 1em;*/
+.table ul.itemizedlist,
+.table ol.orderedlist {
+  margin: 0;
 }
-.table .itemizedlist > .listitem > p {
+.table ul.itemizedlist > .listitem > p,
+.table ol.orderedlist > .listitem > p {
   font-family: Liberation Sans, sans-serif, STIXGeneral, STIXSizeOneSym, STIXSize1;
 }
 .table.color th {
@@ -2087,8 +2085,8 @@ div.itemizedlist ul,
 div.orderedlist ul,
 div.itemizedlist ol,
 div.orderedlist ol {
-  padding-left: 26px;
-  margin: 0;
+  margin: 0 0 0 40px;
+  padding: 0;
 }
 div.book {
   /* --------------------------------------
