--- a/css/refactor/chemistry-skeleton.less
+++ b/css/refactor/chemistry-skeleton.less
@@ -4,7 +4,6 @@
 
 
 // Would #content>#note>#title>.style('sciences-interconnect'; any); work?
-
 .chapter .note {
   &.sciences-interconnect {
     #content>#note>.style('sciences-interconnect'; any);
@@ -163,6 +162,11 @@ div.colophon.end-of-book-solutions .chapter-area {
   // Solution child selector override from PreCalc
   div.solution {
     #content>#solution>.style(@kind; book-end);
+      div.itemizedlist, div.orderedlist {
+    ul, ol {
+      #content>#list>.style(any; end-of-book-solutions; solution);
+    }
+  }
   }
 }
 
